--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@ footer {
     text-align: center;
     color: black;
     width: 100%;
-    padding: 40px 10px;
-    
+    padding: 40px;
+    margin-top: 113px;
+    margin-bottom: 0%;
+
 }
